[project]
name = "pysolplanet"
version = "0.0.1"
authors = [
  { name="Fufs", email="42976807+Fufs@users.noreply.github.com" },
]
description = "Python package for interacting with Solplanet PV inverters through the Wi-Fi Stick"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "aiohttp==3.1.8"
]

[project.urls]
"Homepage" = "https://github.com/Fufs/pysolplanet"
"Bug Tracker" = "https://github.com/Fufs/pysolplanet/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"